istio/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver
spec:
  gateways:
    - webserver-gateway
  hosts: 
  - "*"
  http:
  - route:
    - destination:
        host: webserver-service
        subset: webserver-1
      weight: 30
    - destination:
        host: webserver-service
        subset: webserver-2
      weight: 45
    - destination:
        host: webserver-service
        subset: webserver-3
      weight: 25

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webserver
spec:
  host: webserver-service
  subsets:
    - name: webserver-1
      labels:
        name: webserver-1
    - name: webserver-2
      labels:
        name: webserver-2
    - name: webserver-3
      labels:
        name: webserver-3
